kubernetes/03-screenshot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elcom-strompreise-website-screenshot
  labels:
    app: elcom-strompreise-website-screenshot
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: elcom-strompreise-website-screenshot
  template:
    metadata:
      labels:
        app: elcom-strompreise-website-screenshot
    spec:
      containers:
        - name: elcom-strompreise-website-screenshot
          image: interactivethings/electricity-prices-switzerland-screenshot
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 3000
