kubernetes/04-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elcom-strompreise-website-app
  labels:
    app: elcom-strompreise-website-app
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: elcom-strompreise-website-app
  template:
    metadata:
      labels:
        app: elcom-strompreise-website-app
    spec:
      containers:
        - image: interactivethings/electricity-prices-switzerland
          name: elcom-strompreise-website-app
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
