kubernetes/02-traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elcom-strompreise-website
  name: elcom-strompreise-website-reverse-proxy
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: elcom-strompreise-website
