kubernetes/04-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elcom-strompreise-website-app
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    app: elcom-strompreise-website-app
