kubernetes/03-screenshot-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elcom-strompreise-website-screenshot-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/screenshot
        pathType: Prefix
        backend:
          service:
            name: elcom-strompreise-website-screenshot
            port:
              name: http
