kubernetes/04-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elcom-strompreise-website-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elcom-strompreise-website-app
            port:
              name: http
